--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -209,7 +209,7 @@ set. This is formalized in RZ as shown in Figure~\ref{fig:kuratowski}.
 \begin{figure}
 \[
 \begin{array}{l}
-\iDefinition{\texttt{K}\ (\texttt{A} : \mathsf{thy}\ \  \iParameter{\mathtt{a}}{\iSet}.\ \  \textsf{end})}{\mathtt{thy}}\\
+\iDefinition{\texttt{K}\ (\texttt{A} : \mathtt{thy}\ \  \iParameter{\mathtt{a}}{\iSet}.\ \  \texttt{end})}{\mathtt{thy}}\\
 \qquad \iInclude{\mathtt{Semilattice}}.\\
 \qquad \iParameter{\mathtt{singleton}}{\mathtt{A.a} \to \mathtt{s}}.\\
 \qquad \iDefinition{\mathtt{fin}}{\mathtt{s}}.\\
