--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -16,8 +16,12 @@
 
 \input{macros.tex}
 
+% To distinguish between the long and short version
 \newif\iflong
+% Uncommment this for short version:
 \longfalse
+% Uncomment this for long version:
+%\longtrue
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
