--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -43,11 +43,14 @@ and postconditions).
 
 %\bigskip
 
-We have therefore implemented a system, called RZ, to serve as a bridge between
-the logical world and the programming world\footnote{RZ is publicly available for download at \url{http://math.andrej.com/rz/}.}. RZ translates
-specifications in constructive logic into standard interface code in a
-programming language (currently  
-Objective Caml~\cite{ocaml}, but other languages could be used).
+We have therefore implemented a system, called RZ, to serve as a
+bridge between the logical world and the programming world.\footnote{RZ
+  is publicly available for download at
+  \url{http://math.andrej.com/rz/}, together with a longer version of
+  this paper.} RZ translates specifications in
+constructive logic into standard interface code in a programming
+language (currently Objective Caml~\cite{ocaml}, but other languages
+could be used).
 
 The constructive part of the original specification turns into
 interface code,
