--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -208,8 +208,8 @@ represent the same morphism if, for all $u, u' \in \support{A}$,
 that maps equivalent arguments to equivalent results.
 \fi % \iflong
 
-\iflong
 The category of modest sets has a very rich structure.
+\iflong
 For example, we
 may form a cartesian product $A \times B$ of modest sets $A$ and $B$
 by
@@ -251,8 +251,8 @@ constructions on modest sets.
 
 \bigskip
 \else % \iflong
+It is a regular and locally cartesian closed, see e.g.~\cite{Bauer:00}.
 \fi % \iflong
-
 
 \iflong
 As an example we consider the cyclic group on seven elements $(\ZZ_7,
@@ -439,13 +439,11 @@ $\ifalse$, $=$, $\land$, $\Rightarrow$ and $\forall$ is stable, but
 there may be other propositions that are stable and are not written
 in the negative form.
 
-\iflong
 It would be unproductive to bother the programmer with requirements
 for useless code.  On input, RZ allows users to specify that  
 predicates will have no computational content.  On output, extracted
 realizers also go through a \emph{thinning} phase, see Section~\ref{sec:translation}, which
 optimizes away references to irrelevant realizers.
-\fi
 
 \subsection{Uniform families of modest sets}
 \label{sec:uniform-families}
