--- a/doc/cie/wtype.tex
+++ b/doc/cie/wtype.tex
@@ -39,7 +39,7 @@ The theory $\mathtt{Branching}$ describes that a branching type
 consits of a set~$s$ and a set~$t$ depending on~$s$. The theory~$W$ is
 parametrized by a branching type~$B$. It specifies a set~$w$ of
 well-founded trees and a tree-forming operation $\mathtt{tree}$ with a
-dependent type $\prod_{x \in B.s} (B.t(x) \to w) \to w$. Given a
+dependent type $\pi_{x \in B.s} (B.t(x) \to w) \to w$. Given a
 branching type~$x$ and a map $f : B.t(x) \to w$, $\mathtt{tree}\,x\,f$
 is the tree whose root has branching type~$x$ and whose successor
 labeled by $\ell \in B.t(x)$ is the tree~$f(\ell)$. The inductive
@@ -78,10 +78,14 @@ by figuring out how $\mathtt{induction}$ works.
   \label{fig:wtype-implementation}
 \end{figure}
 
-The following is the unabridged output for the theory of inductive
-types shown in Figure~\ref{fig:wtype}.
+\iflong
+%
+To give at least one complete example, we include here an
+unabridged output for the theory of inductive types shown in
+Figure~\ref{fig:wtype}.
 
 \sourcefile{wtype.mli}
+\fi % iflong
 
 %%% Local Variables: 
 %%% mode: latex
