--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -290,8 +290,12 @@ realized.
 %
 Not all modest sets have decidable
 equality.  Examples include implementations of semigroups with an undecidable word
-problem~\cite{post47:_recur_unsol_probl_thue}, implementations of computable sets of integers (which might be realized by
-membership functions of type $\cint\to\cbool$), and implementations of computable real numbers (which might be realized
+problem~\cite{post47:_recur_unsol_probl_thue}%
+\iflong
+, implementations of computable sets of integers (which might be realized by
+membership functions of type $\cint\to\cbool$),
+\fi
+and implementations of computable real numbers (which might be realized
 by infinite Cauchy sequences).  Every modest set induces a partial equivalence relation, but there is no
 presupposition that this equivalence is computable (implementable).
 
